--- a/GUMS/Components/Pages/Home.razor
+++ b/GUMS/Components/Pages/Home.razor
@@ -6,15 +6,15 @@
 <PageTitle>Home - GUMS</PageTitle>
 
 <div class="container-fluid py-4">
-    <h1>Welcome to GUMS</h1>
-    <p class="lead">Girl Guide Unit Management System</p>
+    <h1>Welcome to your unit!</h1>
+    <p class="lead">Manage your Girl Guiding unit with ease</p>
 
     <div class="row mt-4">
         <div class="col-md-4">
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Member Register</h5>
-                    <p class="card-text">Manage girls and leaders in your unit.</p>
+                    <p class="card-text">See all your girls and leaders in one place.</p>
                     <a href="/Register" class="btn btn-primary">View Register</a>
                 </div>
             </div>
