--- a/GUMS/Components/Layout/NavMenu.razor
+++ b/GUMS/Components/Layout/NavMenu.razor
@@ -2,7 +2,10 @@
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">GUMS</a>
+        <a class="navbar-brand d-flex align-items-center" href="">
+            <img src="/UnitLogo.png" alt="Girl Guiding Unit Logo" style="height: 50px; margin-right: 10px;" />
+            <span>GUMS</span>
+        </a>
     </div>
 </div>
 
