--- a/GUMS/Components/Pages/Register/Index.razor
+++ b/GUMS/Components/Pages/Register/Index.razor
@@ -28,21 +28,21 @@
         <div class="card-body">
             <div class="row g-3">
                 <div class="col-md-4">
-                    <label class="form-label">Search</label>
-                    <input type="text" class="form-control" @bind="searchTerm" @bind:event="oninput" @onkeyup="HandleSearch" placeholder="Name or membership number..." />
+                    <label class="form-label">Find someone</label>
+                    <input type="text" class="form-control" @bind="searchTerm" @bind:event="oninput" @onkeyup="HandleSearch" placeholder="Type a name or membership number" />
                 </div>
                 <div class="col-md-3">
-                    <label class="form-label">Type</label>
+                    <label class="form-label">Show me</label>
                     <select class="form-select" @bind="filterType" @bind:after="LoadMembers">
-                        <option value="">All</option>
-                        <option value="Girl">Girls</option>
-                        <option value="Leader">Leaders</option>
+                        <option value="">Everyone</option>
+                        <option value="Girl">Girls only</option>
+                        <option value="Leader">Leaders only</option>
                     </select>
                 </div>
                 <div class="col-md-3">
                     <label class="form-label">Section</label>
                     <select class="form-select" @bind="filterSection" @bind:after="LoadMembers">
-                        <option value="">All Sections</option>
+                        <option value="">All sections</option>
                         <option value="Rainbow">Rainbows</option>
                         <option value="Brownie">Brownies</option>
                         <option value="Guide">Guides</option>
@@ -53,7 +53,7 @@
                     <label class="form-label">Status</label>
                     <select class="form-select" @bind="filterStatus" @bind:after="LoadMembers">
                         <option value="active">Active</option>
-                        <option value="inactive">Inactive</option>
+                        <option value="inactive">Left</option>
                         <option value="all">All</option>
                     </select>
                 </div>
@@ -74,7 +74,7 @@
     else if (!members.Any())
     {
         <div class="alert alert-info">
-            <i class="bi bi-info-circle"></i> No members found. Click "Add Girl" or "Add Leader" to get started.
+            <i class="bi bi-info-circle"></i> Your register is empty. Add your first girl or leader to get started!
         </div>
     }
     else
