--- a/GUMS/Components/Layout/NavMenu.razor
+++ b/GUMS/Components/Layout/NavMenu.razor
@@ -3,8 +3,7 @@
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand d-flex align-items-center" href="">
-            <img src="/UnitLogo.svg" alt="Girl Guiding Unit Logo" class="unit-logo" />
-            <span>GUMS</span>
+            <img src="/UnitLogowhite.png" alt="Girl Guiding Unit Logo" class="unit-logo" />
         </a>
     </div>
 </div>
