--- a/GUMS/Components/Layout/NavMenu.razor
+++ b/GUMS/Components/Layout/NavMenu.razor
@@ -24,6 +24,12 @@
             </NavLink>
         </div>
 
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Configuration/Terms">
+                <span class="bi bi-calendar-event" aria-hidden="true"></span> Term Dates
+            </NavLink>
+        </div>
+
         <AuthorizeView>
             <Authorized>
                 <div class="nav-item px-3">
