--- a/GUMS/Components/Layout/NavMenu.razor
+++ b/GUMS/Components/Layout/NavMenu.razor
@@ -25,6 +25,12 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Meetings">
+                <span class="bi bi-calendar-week" aria-hidden="true"></span> Meetings
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="Configuration/Terms">
                 <span class="bi bi-calendar-event" aria-hidden="true"></span> Term Dates
             </NavLink>
